tests/qml/invalid/InvalidAlias2.qml
import QtQuick 2.0

Item {
  property alias buttonText: asd.
}
